--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "ftdysa/website",
     "description": "Source for fdysart.com.",
     "require": {
-        "silex/silex": "^1.3"
+        "silex/silex": "^1.3",
+        "twig/twig": "^1.20"
     },
     "authors": [
         {
