--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,20 @@
     "description": "Source for fdysart.com.",
     "require": {
         "silex/silex": "^1.3",
-        "twig/twig": "^1.20"
+        "twig/twig": "^1.20",
+        "symfony/console": "^3.0",
+        "intervention/image": "^2.3",
+        "symfony/finder": "^3.0"
     },
     "authors": [
         {
             "name": "Fred Dysart",
             "email": "ftdysa@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Ftdysa\\Website\\": "src/"
+        }
+    }
 }
